data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Failure__c/Data_Cloud_Failure__c.object-meta.xml
<CustomObject>
    <label>Data Cloud Failure</label>
    <nameField>
        <label>Data Cloud Failures Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Cloud Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>