data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Failure__c/fields/Failure_Date__c.field-meta.xml
<CustomField>
    <fullName>Failure_Date__c</fullName>
    <label>Failure Date</label>
    <type>Date</type>
</CustomField>