data-cloud-error-handling/force-app/main/default/objects/Data_Cloud_Failure__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>